# ERF

./: .codespell-ignore-words  .codespellrc  .gitignore  .gitmodules  .readthedocs.yml  CHANGES  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE.md  README.rst  copyright.txt  license.txt
Exec/: CMakeLists.txt  Make.ERF  inputs.mesh_refinement  inputs.time_integration
Exec/ABL/: Backtrace.0  CMakeLists.txt  ERF_prob.H  ERF_prob.cpp  GNUmakefile  input_ReTau2000DNS_sounding.txt  input_ReTau2000DNS_xlo_w.txt  input_ReTau2000DNS_xlo_w.txt~  input_sounding_GABLS1  inputs.read  inputs.time_integration  inputs.write  inputs_DataSampler  inputs_GABLS1  inputs_GABLS1_deardorff  inputs_GABLS1_mynn25  inputs_GABLS1_ysu  inputs_deardorff  inputs_deardorff_msf  inputs_deardorff_no_msf  inputs_ex  inputs_gabls1_mynn25_smag  inputs_ml_most  inputs_most  inputs_most_bomex  inputs_most_msf  inputs_most_no_msf  inputs_most_pbl  inputs_most_test  inputs_mpmd  inputs_numdiff  inputs_omp  inputs_sample  inputs_smagorinsky  inputs_smagorinsky_msf  inputs_smagorinsky_no_msf  inputs_smagorinsky_regtest  inputs_vel_avg  prob.H  prob.cpp  (+1 more)
Exec/ABL_Terrain/: inputs.read  inputs.write  inputs_deardorff  inputs_ml_most  inputs_most  inputs_smagorinsky  prob.cpp
Exec/ABL_brian/: CMakeLists.txt  inputs_ex  prob.H  prob.cpp
Exec/ABL_input_sounding/: CMakeLists.txt  ERF_prob.H  ERF_prob.cpp  GNUmakefile  README  abl_mwe.i  abl_mwe_moist.i  abl_mwe_moist_stationary.i  input_sounding  input_sounding_moist  prob.H  prob.cpp
Exec/ABL_new/: CMakeLists.txt  GNUmakefile  abl_bndry_input.i  inputs_abl  plot_profiles.py  prob.H  prob.cpp
Exec/ABL_perturbation_inflow/: GNUmakefile  input_ReTau2000DNS.txt  input_ReTau2000_loglaw.txt  inputs_perturb  inputs_toc_inout  sourceRun.sh  toc_inout_inputs
Exec/AWAKEN/: CMakeLists.txt  ERF_prob.H  ERF_prob.cpp  GNUmakefile  Make.package  README  inputs_AWAKEN  inputs_All_EWP  inputs_KingPlains_EWP  inputs_KingPlains_Fitch  inputs_KingPlains_SimpleAD  windturbines_AWAKEN.txt  windturbines_All.txt  windturbines_ArmadilloFlats.txt  windturbines_spec_AWAKEN.tbl
Exec/Bubble/: CMakeLists.txt  GNUmakefile  inputs_squall2d_x  prob.H  prob.cpp
Exec/ChannelDNS/: CMakeLists.txt  inputs_ex  prob.H  prob.cpp
Exec/ChannelFlow/: CMakeLists.txt  GNUmakefile  inputs_dns  inputs_les  prob.H  prob.cpp
Exec/ChannelLES/: CMakeLists.txt  inputs_ex  prob.H  prob.cpp  prob_parm.H
Exec/CouetteFlow/: AMReX_buildInfo.cpp  Backtrace.0  Backtrace.1  Backtrace.2  Backtrace.3  CMakeLists.txt  GNUmakefile  Make.package  clean.sh  clean.sh~  couette_helpers.py  inputs.time_integration  inputs_couette  inputs_couette_regtest  inputs_couette_x  inputs_couette_y  inputs_ex  plot_couette_flow_evolution.py  prob.H  prob.cpp  prob_parm.H
Exec/DensityCurrent/: AMReX_buildInfo.cpp  Backtrace.0  CMakeLists.txt  DensityCurrent_detJ2.i  GNUmakefile  Make.package  README  init_custom_terrain.cpp  init_ideal_terrain.cpp  inputs_crse_halfdomain  inputs_crse_halfdomain_msf  inputs_crse_halfdomain_no_msf  inputs_crse_halfdomain_zlev  inputs_crse_outflow  inputs_crse_periodic  inputs_ex  inputs_ml  inputs_ref  inputs_refsoln  inputs_straka_mri  inputs_wrf_baseline  prob.H  prob.ann  prob.cpp  prob_terrain.cpp  runscript_baseline  runscript_refsoln
Exec/DensityCurrent_Terrain/: AMReX_buildInfo.cpp  Backtrace.0  CMakeLists.txt  GNUmakefile  init_custom_terrain.cpp  init_ideal_terrain.cpp  inputs  inputs_crse_halfdomain  inputs_crse_halfdomain_zlev  inputs_crse_periodic  inputs_ml  inputs_refsoln  inputs_wrf_baseline  prob.cpp  prob_terrain.cpp
Exec/EWP/: ERF_prob.H  ERF_prob.cpp  GNUmakefile  README  inputs_1WT_lat_lon  inputs_1WT_x_y  inputs_EWP_WindFarm  inputs_EWP_WindFarm_49Turb  inputs_PBL_1WT  inputs_WindFarm_lat_lon  inputs_WindFarm_x_y  prob.H  prob.cpp  turbine_locations.vtk  wind-turbine-1.tbl_PBL_1WT  windturbines.txt  windturbines.txt_PBL_1WT  windturbines_PBL_1WT.txt  windturbines_WindFarm.txt  windturbines_loc_x_y_1WT.txt  windturbines_loc_x_y_WindFarm.txt
Exec/EkmanSpiral/: CMakeLists.txt  GNUmakefile  check_convergence.py  init_ideal_terrain.cpp  inputs_ex  inputs_ex_regtest  prob.H  prob.cpp  run_convergence_study.sh
Exec/EkmanSpiral_custom/: CMakeLists.txt  GNUmakefile  inputs_ex  prob.H  prob.cpp
Exec/EkmanSpiral_ideal/: CMakeLists.txt  GNUmakefile  init_ideal_terrain.cpp  inputs_ideal_EkmanSpiral  prob.cpp
Exec/EkmanSpiral_input_sounding/: CMakeLists.txt  GNUmakefile  inputs_input_sounding_EkmanSpiral  prob.cpp
Exec/Fitch/: GNUmakefile  inputs_Fitch  inputs_Fitch_LargeDomain  inputs_Fitch_Testing  inputs_Fitch_WindFarm  prob.cpp  windturbines.txt  windturbines.txt_LargeDomain
Exec/IsentropicVortex/: CMakeLists.txt  GNUmakefile  check_stationary_vortex_rmse.py  check_vortex_rmse.py  inputs_advecting  inputs_advecting_msf  inputs_advecting_no_msf  inputs_advecting_regtest  inputs_ex  inputs_large  inputs_ref  inputs_stationary  inputs_stationary_msf  inputs_stationary_no_msf  isentropic_vortex_helpers.py  prob.H  prob.cpp  prob_parm.H
Exec/LLJ/: CMakeLists.txt  ERF_prob.H  ERF_prob.cpp  GNUmakefile  README  inputs  prob.H  prob.cpp
Exec/MetGrid/: GNUmakefile  inputs  prob.cpp
Exec/MovingTerrain/: Backtrace.0  CMakeLists.txt  GNUmakefile  inputs  prob.H  prob.cpp
Exec/MultiBlock/: CMakeLists.txt  GNUmakefile  inputs_amrex  inputs_crse_periodic  inputs_erf1  inputs_erf2  prob.cpp
Exec/NavierStokesTest/: CMakeLists.txt  inputs_ex  prob.H  prob.cpp
Exec/PoiseuilleFlow/: CMakeLists.txt  GNUmakefile  inputs.time_integration  inputs_neumann_test  inputs_poiseuille  inputs_poiseuille_x  inputs_poiseuille_y  prob.H  prob.cpp
Exec/Radiation/: CMakeLists.txt  ERF_prob.H  ERF_prob.cpp  GNUmakefile  README  inputs_radiation  prob.H  prob.cpp
Exec/RegTests/: CMakeLists.txt
Exec/ScalarAdvDiff/: CMakeLists.txt  GNUmakefile  README  inputs.ref  inputs.ref.uniform_u  inputs.ref2  inputs.test  inputs_WENO  inputs_WENO_Z  inputs_adv_diff_uniformU  inputs_adv_diff_uniformU_regtest  inputs_advdiffinflowoutflow  inputs_advect_shearU  inputs_advect_shearU_msf  (+19 more)
(+2132 files in other folders)
