set(erf_lib_name erf_srclib)
add_library(${erf_lib_name} OBJECT)
include(${CMAKE_SOURCE_DIR}/CMake/BuildERFExe.cmake)
build_erf_lib(${erf_lib_name})
if (ERF_ENABLE_MULTIBLOCK)
  add_subdirectory(MultiBlock)
else ()
  add_subdirectory(ABL)
  add_subdirectory(Bubble)
  add_subdirectory(ChannelFlow)
  add_subdirectory(CouetteFlow)
  add_subdirectory(DensityCurrent)
  add_subdirectory(SuperCell)
  add_subdirectory(EkmanSpiral_custom)
  add_subdirectory(EkmanSpiral_ideal)
  add_subdirectory(EkmanSpiral_input_sounding)
  add_subdirectory(IsentropicVortex)
  add_subdirectory(DevTests/MovingTerrain)
  add_subdirectory(PoiseuilleFlow)
  add_subdirectory(ScalarAdvDiff)
  add_subdirectory(TaylorGreenVortex)
  add_subdirectory(WitchOfAgnesi)
  add_subdirectory(WPS_Test)
endif()
