set(erf_lib_name erf_srclib)
add_library(${erf_lib_name} OBJECT)
include(${CMAKE_SOURCE_DIR}/CMake/BuildERFExe.cmake)
build_erf_lib(${erf_lib_name})
if (ERF_ENABLE_MULTIBLOCK)
  add_subdirectory(DevTests/MultiBlock)
else if(ERF_ENABLE_REGRESSION_TESTS_ONLY)
#  add_subdirectory(RegTests/Bubble)
  add_subdirectory(RegTests/CouetteFlow)
  add_subdirectory(RegTests/DensityCurrent)
  add_subdirectory(RegTests/DynamicRefinement)
  add_subdirectory(RegTests/EkmanSpiral_custom)
  add_subdirectory(RegTests/IsentropicVortex)
  add_subdirectory(RegTests/PoiseuilleFlow)
  add_subdirectory(RegTests/ScalarAdvDiff)
  add_subdirectory(RegTests/TaylorGreenVortex)
  add_subdirectory(DevTests/MovingTerrain)
else ()
  add_subdirectory(ABL)
  add_subdirectory(SuperCell)
  add_subdirectory(Radiation)
  add_subdirectory(SquallLine_2D)
  add_subdirectory(RegTests/Bubble)
  add_subdirectory(RegTests/CouetteFlow)
  add_subdirectory(RegTests/DensityCurrent)
  add_subdirectory(RegTests/DynamicRefinement)
  add_subdirectory(RegTests/EkmanSpiral_custom)
  add_subdirectory(RegTests/EkmanSpiral_ideal)
  add_subdirectory(RegTests/EkmanSpiral_input_sounding)
  add_subdirectory(RegTests/GABLS1)
  add_subdirectory(RegTests/IsentropicVortex)
  add_subdirectory(RegTests/PoiseuilleFlow)
  add_subdirectory(RegTests/ScalarAdvDiff)
  add_subdirectory(RegTests/TaylorGreenVortex)
  add_subdirectory(RegTests/WitchOfAgnesi)
  add_subdirectory(RegTests/WPS_Test)
  add_subdirectory(DevTests/MovingTerrain)
  add_subdirectory(DevTests/ParticlesOverWoA)
  add_subdirectory(DevTests/MiguelDev)
  add_subdirectory(DevTests/MetGrid)
  add_subdirectory(DevTests/LandSurfaceModel)
  add_subdirectory(DevTests/TemperatureSource)
endif()
